Incorporate updates from official repository